<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".onboarding.screen.CurrencyPriceScreen">

    <TextView
        android:id="@+id/CongratTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/CigarettesPackScreenTitle"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/screen_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CongratTitle"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:backgroundTint="@color/secondaryColor"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_2sdp">

        <TextView
            android:id="@+id/congratText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/CigarettesPackScreenText"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/currency_card"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_below="@+id/screen_text_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:backgroundTint="@color/secondaryColor"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_2sdp">

        <EditText
            android:id="@+id/price_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textSize="@dimen/_25ssp"
            android:textColor="@color/light_brown"
            android:text="3.00"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/transparent"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/letsDoThisBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:text="@string/NextText"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold" />


</RelativeLayout>