<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".onboarding.screen.StopDateScreen">

    <TextView
        android:id="@+id/CongratTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/StopScreenTitle"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/screen_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:backgroundTint="@color/secondaryColor"
        android:layout_below="@+id/CongratTitle"
        app:cardElevation="@dimen/_2sdp">

        <TextView
            android:id="@+id/congratText"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:text="@string/StopScreenText"
            android:textSize="@dimen/_12ssp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/screen_text_id"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:backgroundTint="@color/secondaryColor"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_2sdp">

        <RelativeLayout
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="@dimen/_50sdp">

            <TextView
                android:id="@+id/today_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="Bugün"
                android:textColor="@color/light_brown"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="1 sentyabr 2022"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

        </RelativeLayout>



    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/letsDoThisBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:text="@string/NextText"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold" />




</RelativeLayout>